<resources>
    <string name="app_name">UberLike</string>
    <string name="title_activity_maps">Map</string>
    <string name="Quiero_ingresar_cliente">Quiero ingresar como cliente</string>
    <string name="Quiero_ingresar_trabajar">Quiero trabajar</string>
    <string name="email">E-Mail</string>
    <string name="passwd">Contraseña</string>
    <string name="vuelva_a_escribir_passwd">Vuelva a escribir la contraseña</string>
    <string name="vehiculo">Vehiculo</string>
    <string name="Numero_registro">Número del registro del auto</string>
    <string name="Usuario_creado_correctamente">Usuario creado correctamente</string>
    <string name="Ok">Ok</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Recordar_passwd">Recordar contraseña</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Iniciar_sesion">Iniciar sesión</string>
    <string name="Se_deben_llenar_todos_los_casilleros">Se deben llenar todos los casilleros</string>
    <string name="Pedir_un_nuevo_viaje">Pedir un nuevo viaje</string>
    <string name="Estado_del_Pedido">Estado del pedido</string>
    <string name="Direccion_Destino">Dirección Destino</string>
    <string name="Mi_Direccion">Mi Dirección</string>
    <string name="Pedido_realizado">Pedido Realizado</string>
    <string name="Usted_no_pidio_ningun_viaje">Usted no pidio ningun viaje</string>
    <string name="Su_viaje_fue_registrado">Su viaje fue registrado y esta la cola de espera.</string>
    <string name="Estado">Estado: </string>
    <string name="El_conductor_es">El conductor es: </string>
    <string name="el_auto_tiene">tiene un: </string>
    <string name="el_numero_de_matricula_del_conductor_es">El número de matricula del conductor es: </string>
    <string name="Comentarios_del_conductor">Comentarios del Conductor: </string>
    <string name="Su_viaje_fue_aceptado">Su viaje fue aceptado.</string>
    <string name="Listado_de_viajes_disponibles">Listado de viajes disponibles</string>
    <string name="Desea_aceptar_el_viaje">Desea aceptar el viaje? </string>
    <string name="Origen">Origen: </string>
    <string name="Destino">Destino: </string>
    <string name="Comentario">Comentario</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="El_viaje_fue_aceptado_correctamente">El viaje fue aceptado correctamente</string>
    <string name="Complete_mi_viaje">Complete mi viaje</string>
    <string name="Solo_puede_tener_un_viaje_activo_al_mismo_tiempo">Solo puede tener un viaje activo al mismo tiempo</string>
    <string name="Completo_su_viaje">Usted ha finalizado su viaje? </string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Usted_no_tiene_viajes_activos">Usted no tiene viajes activos</string>
</resources>
